force-app/main/default/objects/DatatableColumns__c/DatatableColumns__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Datatable Columns</label>
</CustomObject>