force-app/main/default/objects/DatatableColumns__c/fields/Add_Field__c.field-meta.xml
<CustomField>
    <fullName>Add_Field__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This will be automatically marked as true when you select a field to display in datatable columns</inlineHelpText>
    <label>Add Field</label>
    <type>Checkbox</type>
</CustomField>