force-app/main/default/objects/DatatableColumns__c/fields/Cash_Receipt_Field__c.field-meta.xml
<CustomField>
    <fullName>Cash_Receipt_Field__c</fullName>
    <inlineHelpText>This will contain the field API name for the cash receipt object</inlineHelpText>
    <label>Cash Receipt Field</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>