force-app/main/default/objects/DatatableColumns__c/fields/Journal_Entry_Line_Field__c.field-meta.xml
<CustomField>
    <fullName>Journal_Entry_Line_Field__c</fullName>
    <inlineHelpText>This will contain the field API name for the journal entry line object</inlineHelpText>
    <label>Journal Entry Line Field</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>