force-app/main/default/objects/DatatableColumns__c/fields/label__c.field-meta.xml
<CustomField>
    <fullName>label__c</fullName>
    <inlineHelpText>Value added here will be shown as a label in the data table column</inlineHelpText>
    <label>label</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>