force-app/main/default/objects/DatatableColumns__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <inlineHelpText>This will store the type of data related to the cash receipt field and Journal Entry Line field</inlineHelpText>
    <label>Type</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>